RESOLVED FIXED269305
[WGSL] Global sort does not check max expression depth in parameters
https://bugs.webkit.org/show_bug.cgi?id=269305
Summary [WGSL] Global sort does not check max expression depth in parameters
Tadeu Zagallo
Reported 2024-02-13 11:10:39 PST
...
Attachments
Tadeu Zagallo
Comment 1 2024-02-13 11:10:44 PST
Tadeu Zagallo
Comment 2 2024-02-13 11:12:28 PST
EWS
Comment 3 2024-02-14 02:49:32 PST
Committed 274618@main (2d31dba1a971): <https://commits.webkit.org/274618@main> Reviewed commits have been landed. Closing PR #24355 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.