[WGSL] Global sort does not check max expression depth in parameters https://bugs.webkit.org/show_bug.cgi?id=269305 rdar://122293551

Reviewed by Mike Wyrzykowski.

We check for maximum expression depth in GlobalSorting, but while visiting parameters
we visit further the parameter type, which allows for expressions that exceed the max
depth to occur in the parameter's attributes.

* Source/WebGPU/WGSL/GlobalSorting.cpp:
(WGSL::GraphBuilder::visit):

Canonical link: https://commits.webkit.org/274618@main